tests/suite/fail/generated/types/fail_sub_string_string.ny
fn main() {
    let _ = "a" - "a" //~ ERROR type mismatch in `subtraction` operation
}
